# rdev

./: CHANGELOG.md  Cargo.toml  README.md
examples/: channel.rs  display.rs  grab.rs
src/: lib.rs  rdev.rs
src/linux/: common.rs  gestures.rs  grab.rs  grab.rs.save  keycodes.rs  listen.rs  mod.rs  simulate.rs
src/windows/: common.rs
tests/: grab.rs  listen_and_simulate.rs
