[package]
name = "better-rdev"
version = "1.0.0"
authors = ["Tom Grushka <tom@dra11y.com>", "Nicolas Patry <patry.nicolas@protonmail.com>"]
edition = "2021"

description = "Listen and send keyboard and mouse events on Windows, Linux and MacOS. Forked from rdev (abandoned?) to add cancellation and improve coding practices to use with screen reader."
documentation = "https://docs.rs/better-rdev/"
homepage = "https://github.com/dra11y/better-rdev"
repository = "https://github.com/dra11y/better-rdev"
readme = "README.md"
keywords = ["input", "mouse", "testing", "keyboard", "automation"]
categories = ["development-tools::testing", "api-bindings", "hardware-support"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
lazy_static = "1.4"
log = "0.4.22"

[features]
default = ["unstable_grab"]
serialize = ["serde"]
unstable_grab = ["evdev-rs", "epoll", "inotify"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-graphics = { version = "0.24.0", features = ["highsierra"] }
core-foundation = { version = "0.10" }
core-foundation-sys = { version = "0.7" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
x11 = { version = "2.18", features = ["xlib", "xrecord", "xinput"] }
evdev-rs = { version = "0.6", optional = true }
epoll = { version = "4.1", optional = true }
inotify = { version = "0.11", default-features = false, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "errhandlingapi",
    "processthreadsapi",
] }

[dev-dependencies]
serde_json = "1.0"
# Some tests interact with the real OS. We can't hit the OS in parallel
# because that leads to unexpected behavior and flaky tests, so we need
# to run thoses tests in sequence instead.
serial_test = "3"
tokio = { version = "1.5", features = ["sync", "macros", "rt-multi-thread"] }

[[example]]
name = "serialize"
required-features = ["serialize"]

[[example]]
name = "grab"
required-features = ["unstable_grab"]

[[example]]
name = "tokio_channel"
required-features = ["unstable_grab"]

[[test]]
name = "grab"
path = "tests/grab.rs"
required-features = ["unstable_grab"]
